# Dexholdem-Policy

./: .bash  .gitattributes  .gitignore  README.md  deploy_policy.py  pyproject.toml  record_data.py  requirements.txt  robot_client.py  train.py  visualize_data.py
data_processing/: __init__.py  dataset.py  loading.py  normalization.py
docs/: act.md  adding_a_model.md  data_pipeline.md  diffusion_policy.md  instruction_conditioning.md  obs_encoder.md  rdt.md  release_reproduction.md
learning/: __init__.py  base.py  registry.py
learning/act/: __init__.py  model.py
learning/baku/: __init__.py  model.py
learning/common/: __init__.py  encoders.py  hf_compat.py
learning/dp/: __init__.py  model.py  models.py  nets.py
scripts/: _common.sh  finetune_rdt.sh  prepare.sh  train_act.sh  train_baku.sh  train_dp.sh  train_dp_eff.sh  train_dp_light.sh  train_dp_transformer.sh  train_dp_unet.sh  train_rdt.sh  train_rdt_small.sh
test_code/: README.md  bench_dataloader.py  check_attn_map.py  check_cuda.py  check_environment.py  generate_test_dataset.py  print_npz_content.py  run_all_tests.py  sim_client.py  test_baku.py  test_deploy.py  test_deploy_real_data.py  test_rdt.py  test_read.py  test_training.py  verify_obs_consistency.py  vis_act_modality_attention.py  vis_attn_instruction.py  vis_dp_vs_act_attention.py  vis_modality_attention.py  vis_modality_sensitivity_all.py  visualize_npz_image.py
workflow/: download_data.py  download_from_hf.py  instructions.json  npz_to_npy.py  organize_data.py  precompute_features.py  prepare_data.py  upload_to_hf.py
(+2 files in other folders)
